--- a/HousePricing.ipynb
+++ b/HousePricing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNChVYTxybKIX3pp1nlJQIE",
+      "authorship_tag": "ABX9TyOlsDHfH7AOXL/3OYY9ImAg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Housing Price Model"
+      ],
+      "metadata": {
+        "id": "LgIHRajZTp_t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## SetUp"
+      ],
+      "metadata": {
+        "id": "bD5sNyXsaN4t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dependencies"
+      ],
+      "metadata": {
+        "id": "2RfMQuGqUJ4U"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "9aomUOZfLh3J"
       },
@@ -45,22 +72,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Load DataFrame"
+      ],
+      "metadata": {
+        "id": "m8UHwfqqZ4WE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "url = 'https://raw.githubusercontent.com/renatocorreia-rmcm/housing-price/refs/heads/main/housing_price_dataset.csv'\n",
         "df = pd.read_csv(url)  # load raw csv from github to dataframe object here\n",
         "\n",
-        "df.head()"
+        "df.head()  # test integrity"
       ],
       "metadata": {
+        "id": "82Bt6dyCaEPw",
+        "outputId": "b62bfe43-9638-425d-c609-60234429266f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "id": "HAd7CyqXOUac",
-        "outputId": "f13b34c2-1abe-4d37-f218-24f435b6b9f4"
+        }
       },
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -82,7 +118,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dbc597ba-9dc1-4fb2-8448-776f2fdb1c34\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e8ef78f7-58db-4452-a0aa-7c62dfd5778f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -173,7 +209,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dbc597ba-9dc1-4fb2-8448-776f2fdb1c34')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e8ef78f7-58db-4452-a0aa-7c62dfd5778f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -225,12 +261,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dbc597ba-9dc1-4fb2-8448-776f2fdb1c34 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e8ef78f7-58db-4452-a0aa-7c62dfd5778f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dbc597ba-9dc1-4fb2-8448-776f2fdb1c34');\n",
+              "        const element = document.querySelector('#df-e8ef78f7-58db-4452-a0aa-7c62dfd5778f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -250,8 +286,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-1e866a7c-8ac5-4395-ba12-9469690e03a1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1e866a7c-8ac5-4395-ba12-9469690e03a1')\"\n",
+              "    <div id=\"df-d96a92ba-df49-47e1-b61c-f0a6f0ce5210\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d96a92ba-df49-47e1-b61c-f0a6f0ce5210')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -370,7 +406,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-1e866a7c-8ac5-4395-ba12-9469690e03a1 button');\n",
+              "            document.querySelector('#df-d96a92ba-df49-47e1-b61c-f0a6f0ce5210 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -387,22 +423,31 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 5
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "L23jJ6hGT63Y"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# get cols for pair plot\n",
         "cols = [c for c in df.columns if c not in ['Price', 'Neighborhood_Rural', 'Neighborhood_Suburb', 'Neighborhood_Urban']]  # take of reference and categoric variables\n",
-        "n = len(cols)\n",
         "ncols = 2  # quantos plots por linha\n",
-        "nrows = ceil(n / ncols)"
+        "nrows = ceil(len(cols) / ncols)"
       ],
       "metadata": {
         "id": "nt6UwxWVO2fI"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -424,9 +469,9 @@
           "height": 487
         },
         "id": "x_diQvnVN9Fh",
-        "outputId": "d51a2bf0-82d5-43e5-ba90-277377312287"
+        "outputId": "0bdc8780-3d83-4eac-8217-d781023db4c9"
       },
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
