--- a/HousePricing.ipynb
+++ b/HousePricing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9bRoSlPzEzqWEAwVzQDkO",
+      "authorship_tag": "ABX9TyOTiqvhBj+aOtC5JWGrt/pD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 31,
       "metadata": {
         "id": "9aomUOZfLh3J"
       },
@@ -67,6 +67,8 @@
         "\n",
         "import matplotlib as mpl\n",
         "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from scipy.stats import pearsonr\n",
         "\n",
         "from math import ceil"
       ]
@@ -619,13 +621,145 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### To House Price"
+      ],
       "metadata": {
-        "id": "YbValBoopN-s"
+        "id": "oTTF6vJf-FGo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### House area\n",
+        "Highly related to house price"
+      ],
+      "metadata": {
+        "id": "COdKnKrp-OAc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pearsonr(df['SquareFeet'], df['Price']).statistic)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YbValBoopN-s",
+        "outputId": "bd8e9374-2aac-4371-c32d-90c4965c783c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.750719785670884\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Amount of Bedrooms in house\n",
+        "Highly related to house price"
+      ],
+      "metadata": {
+        "id": "jn8EgSuL-c7Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pearsonr(df['Bedrooms'], df['Price']).statistic)"
+      ],
+      "metadata": {
+        "id": "4QHQ7gmK8gyI",
+        "outputId": "e1ba1cd7-cf64-4ed2-959e-24921e92dec1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.07262393204089634\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Amount of Bedrooms in house\n",
+        "No related to house price"
+      ],
+      "metadata": {
+        "id": "UAHFOFCQ-WTp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pearsonr(df['Bathrooms'], df['Price']).statistic)"
+      ],
+      "metadata": {
+        "id": "xX39sl4q8sNR",
+        "outputId": "ea93d7dd-00da-4647-bfec-76b8111c0e08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.02841764814765267\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Year of house built\n",
+        "No related to house price"
+      ],
+      "metadata": {
+        "id": "o63tbzrj-W1g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pearsonr(df['YearBuilt'], df['Price']).statistic)"
+      ],
+      "metadata": {
+        "id": "sfFCapMY92Ge",
+        "outputId": "e4326a16-7483-4678-edd2-2b0331257cd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-0.002288324254798025\n"
+          ]
+        }
+      ]
     }
   ]
 }
